--- a/index.html
+++ b/index.html
@@ -238,10 +238,10 @@ rel="stylesheet">
 <nav class="navigation">
 <ul class="nav menu">
 <li class="active"><a href="#" class="scroll">Home</a></li>
-<li><a href="#about" class="scroll">About Us</a></li>
-<li><a href="#programms" class="scroll">Programs</a></li>
+<li><a href="about.html" class="scroll">About Us</a></li>
+<li><a href="programs.html" class="scroll">Programs</a></li>
 <li><a href="courses.html">Courses</a></li>
-<li><a href="#contact" class="scroll">Contact Us</a></li>
+<li><a href="contact.html" class="scroll">Contact Us</a></li>
 </ul>
 </nav>
 </div>
