--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@
 <meta name='copyright' content=''>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=n
 <!-- Title -->
-<title>JOEeXPRESS</tit
+<title>JOEeXPRESS</title>
 <!-- Favicon -->
 <link rel="icon" href="images/JE Techhub logo - Copy.png">
 <script src="https://kit.fontawesome.com/69d2ba44c8.js" crossorigin="anonymous"></script>
