--- a/index.html
+++ b/index.html
@@ -239,8 +239,8 @@ rel="stylesheet">
 <ul class="nav menu">
 <li class="active"><a href="#" class="scroll">Home</a></li>
 <li><a href="about.html" class="scroll">About Us</a></li>
-<!-- <li><a href="programs.html" class="scroll">Programs</a></li>
-<li><a href="courses.html">Courses</a></li> -->
+<!-- <li><a href="programs.html" class="scroll">Programs</a></li>-->
+<li><a href="courses.html">Courses</a></li> 
 <li><a href="contact.html" class="scroll">Contact Us</a></li>
 </ul>
 </nav>
