--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 <!-- Title -->
 <title>JOEeXPRESS</title>
 <!-- Favicon -->
-<script src="https://kit.fontawesome.com/69d2ba44c8.js" crossorigin="anonymous"></script>
+<!-- <script src="https://kit.fontawesome.com/69d2ba44c8.js" crossorigin="anonymous"></script> -->
 <!-- Google Fonts -->
 <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css?family=Poppins:200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i&display=swap"
