--- a/contact.html
+++ b/contact.html
@@ -46,50 +46,50 @@
 <body>
 
 <!-- Header Area -->
-	<!-- Header Area -->
-	<header class="header" >
-		<!-- Header Inner -->
-		<div class="header-inner">
-		<div class="container">
-		<div class="inner">
-		<div class="row">
-		<div class="col-lg-3 col-md-3 col-12">
-		<!-- Start Logo -->
-		<div class="logo">
-		<a href="index.html"><img src="images/JE Techhub logo.png#"></a>
-		</div>
-		<!-- End Logo -->
-		<!-- Mobile Nav -->
-		<div class="mobile-nav"></div>
-		<!-- End Mobile Nav -->
-		</div>
-		<div class="col-lg-7 col-md-9 col-12">
-		<!-- Main Menu -->
-		<div class="main-menu">
-		<nav class="navigation">
-		<ul class="nav menu">
-		<li class="active"><a href="index.html">Home</a></li>
-		
-		
-		<li><a href="index.html#about">About Us </a></li>
-		<li><a href="index.html#>programms">Programms</a></li>
-	
-	
-		<li><a href="contact.html">Contact Us</a></li>
-		</ul>
-		</nav>
-		</div>
-		<!--/ End Main Menu -->
-		</div>
-	
-		</div>
-		</div>
-		</div>
-		</div>
-		<!--/ End Header Inner -->
-		</header>
-		<!-- End Header Area -->
-	
+<!-- Header Area -->
+<header class="header" >
+<!-- Header Inner -->
+<div class="header-inner">
+<div class="container">
+<div class="inner">
+<div class="row">
+<div class="col-lg-3 col-md-3 col-12">
+<!-- Start Logo -->
+<div class="logo">
+<a href="index.html"><img src="images/JE Techhub logo.png#"></a>
+</div>
+<!-- End Logo -->
+<!-- Mobile Nav -->
+<div class="mobile-nav"></div>
+<!-- End Mobile Nav -->
+</div>
+<div class="col-lg-7 col-md-9 col-12">
+<!-- Main Menu -->
+<div class="main-menu">
+<nav class="navigation">
+<ul class="nav menu">
+<li class="active"><a href="index.html">Home</a></li>
+
+
+<li><a href="index.html#about">About Us </a></li>
+<li><a href="index.html#>programms">Programms</a></li>
+
+
+<li><a href="contact.html">Contact Us</a></li>
+</ul>
+</nav>
+</div>
+<!--/ End Main Menu -->
+</div>
+
+</div>
+</div>
+</div>
+</div>
+<!--/ End Header Inner -->
+</header>
+<!-- End Header Area -->
+
 <div class="breadcrumbs overlay">
 <div class="container">
 <div class="bread-inner">
@@ -195,21 +195,22 @@
 </div>
 </section>
 <!--/ End Contact Us -->
+
 <!-- Footer Area -->
-<footer id="footer" class="footer ">
+<footer id="footer" class="footer">
 <!-- Footer Top -->
 <div class="footer-top">
 <div class="container">
 <div class="row">
 <div class="col-lg-3 col-md-6 col-12">
 <div class="single-footer">
+<h2>About Us</h2>
+<p>JE Tech Hub is dedicated to empowering individuals with cutting-edge technology skills through hands-on training and innovative solutions.</p>
 <!-- Social -->
 <ul class="social">
-<li><a href="https://www.instagram.com/joe.express1?igsh=NXZjcnFoZWI1bWI0&utm_source=qr"><i class="icofont-instagram"></i></a></li>
+<li><a href="https://www.instagram.com/je_techhub?igsh=dGZjc29oNnRsOGF2&utm_source=qr"><i class="icofont-instagram"></i></a></li>
 <li><a href="#"><i class="icofont-google-plus"></i></a></li>
 <li><a href="#"><i class="icofont-twitter"></i></a></li>
-<li><a href="#"><i class="icofont-vimeo"></i></a></li>
-<li><a href="#"><i class="icofont-pinterest"></i></a></li>
 </ul>
 <!-- End Social -->
 </div>
@@ -220,18 +221,11 @@
 <div class="row">
 <div class="col-lg-6 col-md-6 col-12">
 <ul>
-<li><a href="index.html"><i class="fa fa-caret-right"
-aria-hidden="true"></i>Home</a>
-</li>
-<li><a href="about.html"><i class="fa fa-caret-right"
-aria-hidden="true"></i>About
-Us</a></li>
-<li><a href="Programs.html"><i class="fa fa-caret-right"
-aria-hidden="true"></i>Services</a>
-</li>
-<li><a href="contact.html"><i class="fa fa-caret-right"
-aria-hidden="true"></i>Contact
-Us</a></li>
+<li><a href="index.html"><i class="fa fa-caret-right" aria-hidden="true"></i>Home</a></li>
+<li><a href="about.html"><i class="fa fa-caret-right" aria-hidden="true"></i>About Us</a></li>
+<li><a href="courses.html"><i class="fa fa-caret-right" aria-hidden="true"></i>Courses</a></li>
+<li><a href="programs.html"><i class="fa fa-caret-right" aria-hidden="true"></i>Programs</a></li>
+<li><a href="contact.html"><i class="fa fa-caret-right" aria-hidden="true"></i>Contact Us</a></li>
 </ul>
 </div>
 </div>
@@ -239,12 +233,22 @@ Us</a></li>
 </div>
 <div class="col-lg-3 col-md-6 col-12">
 <div class="single-footer">
+<h2>Our Services</h2>
+<ul>
+<li><a href="programs.html#webDev"><i class="fa fa-caret-right" aria-hidden="true"></i>Software Development</a></li>
+<li><a href="programs.html#dataAnalysis"><i class="fa fa-caret-right" aria-hidden="true"></i>Data Analysis</a></li>
+<li><a href="programs.html#UIUX"><i class="fa fa-caret-right" aria-hidden="true"></i>UI/UX Design</a></li>
+<li><a href="programs.html#trading"><i class="fa fa-caret-right" aria-hidden="true"></i>Forex Trading</a></li>
+<li><a href="programs.html#vidGraphics"><i class="fa fa-caret-right" aria-hidden="true"></i>Graphics & Video</a></li>
+</ul>
+</div>
+</div>
+<div class="col-lg-3 col-md-6 col-12">
+<div class="single-footer">
 <h2>Open Hours</h2>
-
 <ul class="time-sidual">
 <li class="day">Mondays - Fridays <span>8.00-20.00</span></li>
 <li class="day">Saturdays <span>9.00-18.30</span></li>
-</li>
 </ul>
 </div>
 </div>
@@ -258,7 +262,7 @@ Us</a></li>
 <div class="row">
 <div class="col-lg-12 col-md-12 col-12">
 <div class="copyright-content">
-<p>© Copyright 2018 | All Rights Reserved  </p>
+<p>© Copyright 2024 | All Rights Reserved by <a href="index.html">JE Tech Hub</a></p>
 </div>
 </div>
 </div>
