--- a/getStarted.html
+++ b/getStarted.html
@@ -53,7 +53,7 @@ align-items: start;
 gap:2em;
 padding-inline:5%;
 padding-top: 2em;
-@media (width > 568px) {
+@media (width > 768px) {
 flex-direction: row;
 }
 }		
@@ -63,7 +63,7 @@ flex-direction: row;
 form {
 
 padding: 25px;
-@media (width > 568px){width:70% !important;}	}
+@media (width > 568px){width:100% !important;}	}
 
 input{
 
@@ -122,11 +122,12 @@ background: #85d6de;
 }
 
 .welcomeMessage{
-p{	color: #000;}
+width: 100%;
+p{color: #000;}
 padding-block: 1em;
 font-size: clamp(20px, 1em, 30px);
 text-align: center;
-@media (width > 568px){width: 40% !important;}
+/*@media (width > 568px){width: 40% !important;}*/
 button{
 background: darkblue;
 }
@@ -337,7 +338,7 @@ color: #000;
 </div>
 
 <div class="containerBox">
-<div class="welcomeMessage">
+<div class="welcomeMessage col-lg-6 col-sm-12 col-md-6">
 <p>
 	Join a community of like-minded learners and industry professionals who are
 	passionate about technology and personal growth.	
@@ -347,7 +348,7 @@ color: #000;
 
 </div>
 
-<div>
+<div style="background-color: #1A76D1;" class="col-lg-6 col-md-6 col-sm-12">
     <div class="auth-toggle">
         <button id="loginToggle" onclick="showForm('loginForm')">Login</button>
         <button id="registerToggle" class="active" onclick="showForm('registerForm')">Register</button>
