--- a/getStarted.html
+++ b/getStarted.html
@@ -348,7 +348,7 @@ color: #000;
 
 </div>
 
-<div style="background-color: #1A76D1;" class="col-lg-6 col-md-6 col-sm-12">
+<div style=" class="col-lg-6 col-md-6 col-sm-12">
     <div class="auth-toggle">
         <button id="loginToggle" onclick="showForm('loginForm')">Login</button>
         <button id="registerToggle" class="active" onclick="showForm('registerForm')">Register</button>
