improved pages and authentication, added dashboard and admin pages

--- a/about.html
+++ b/about.html
@@ -212,10 +212,15 @@ JOE EXPRESS</h2>
 
 
 <p class="largerParagraphs fadeSection lineHeight">
-<span class="clip-text">
-At JE Tech Hub, we are driven by a single, powerful mission: to connect education and technology through innovative and practical tutoring that enhances tech skills for individuals and communities alike. Our goal is not just to teach technology but to inspire a deep, hands-on understanding that empowers learners to become proficient and confident in their technical abilities.
-</span>
+
+At JE Tech Hub, we are driven by a single, powerful mission: to connect education and technology through innovative and practical tutoring that enhances tech skills for individuals and communities alike. 
+
   <span id='mission'></span>
+
+</p>
+<p class="largerParagraphs fadeSection lineHeight">
+
+Our goal is not just to teach technology but to inspire a deep, hands-on understanding that empowers learners to become proficient and confident in their technical abilities.
 
 </p>
 <div class=" col-12">
@@ -248,13 +253,19 @@ At JE Tech Hub, we are driven by a single, powerful mission: to connect educatio
 <div class="mobileContainerSpacing offer">
 
 <p class="largerParagraphs fadeSection lineHeight ">
-<span class="clip-text">
+
 <span class='small-header card-title values'>
 //  Our Mission
 </span> <br>
 <span id='vision'></span>
-In today's fast-paced world, technology is at the heart of nearly every industry. From web development to data analysis, software engineering to digital marketing, the demand for tech-savvy professionals continues to grow. At JE Tech Hub, we aim to bridge the gap between education and the ever-evolving tech landscape. Through our carefully designed courses and hands-on approach, we ensure that every learner gains real-world experience and knowledge they can immediately apply in their careers or entrepreneurial ventures.
+In today's fast-paced world, technology is at the heart of nearly every industry. From web development to data analysis, software engineering to digital marketing, the demand for tech-savvy professionals continues to grow.
 </p>
+
+
+<p class="largerParagraphs fadeSection lineHeight ">
+At JE Tech Hub, we aim to bridge the gap between education and the ever-evolving tech landscape. Through our carefully designed courses and hands-on approach, we ensure that every learner gains real-world experience and knowledge they can immediately apply in their careers or entrepreneurial ventures.
+</p>
+
 
   <p class="largerParagraphs fadeSection lineHeight ">
 
