--- a/contact.html
+++ b/contact.html
@@ -156,31 +156,23 @@
 <!-- End Header Area -->
 
 <div class="breadcrumbs overlay">
-<div class="container">
+<div class="container!" style="background-image: url('https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?q=80&w=2000')">
 <div class="bread-inner">
 <div class="row">
 <div class="col-12">
-<h2>Contact Us</h2>
+<h2>Get in Touch with Us</h2>
 <ul class="bread-list">
 <li><a href="index.html">Home</a></li>
 <li><i class="icofont-simple-right"></i></li>
 <li class="active">Contact Us</li>
 </ul>
+
 </div>
 </div>
 </div>
 </div>
 </div>
 <!-- End Breadcrumbs -->
-
-<!-- Hero Section -->
-<div class="hero-section" style="background-image: url('https://images.unsplash.com/photo-1581091226825-a6a2a5aee158?q=80&w=2000');">
-  <div class="hero-content">
-    <h2>Get in Touch with Us</h2>
-    <p>Have questions about our programs or services? We're here to help! Fill out the form below and our team will get back to you promptly.</p>
-  </div>
-</div>
-
 <!-- Start Contact Us -->
 <section class="contact-us section">
 <div class="container">
@@ -190,7 +182,9 @@
 <div class="col-lg-6">
 <div class="contact-us-form">
 <h2>Contact With Us</h2>
-<p>If you have any questions please fell free to contact with us.</p>
+
+<p>Have questions about our programs or services? We're here to help! Fill out the form below and our team will get back to you promptly.</p>
+
 <!-- Form -->
 
 <form class="form" >
