--- a/programs.html
+++ b/programs.html
@@ -37,7 +37,7 @@ rel="stylesheet">
 <!-- Magnific Popup CSS -->
 <link rel="stylesheet" href="css/magnific-popup.css">
 
-<!-- Medipro CSS -->
+<!-- Other CSS -->
 <link rel="stylesheet" href="css/normalize.css">
 <link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="css/responsive.css">
@@ -317,6 +317,8 @@ In today's fast-paced world, technology is not a luxury—it's a necessity. At J
 
 </div>
 </div>
+  <h2>Available Programs</h2>
+          <p>Choose from our comprehensive range of technology training programs</p>
 </div>
 
 <div class="row">
@@ -326,9 +328,9 @@ In today's fast-paced world, technology is not a luxury—it's a necessity. At J
 <div class="course-image">
 <div class="card-slideshow">
 <img src="images/soft.jpg" alt="Software Development" class="active">
-<img src="images/code1.jpg" alt="Software Development">
-<img src="images/code2.jpg" alt="Software Development">
-<img src="images/code3.jpg" alt="Software Development">
+<img src="images/Uiux.jpg" alt="Software Development">
+<img src="images/analysis.jpg" alt="Software Development">
+<img src="images/forex.jpeg" alt="Software Development">
 </div>
 </div>
 <div class="course-content">
