--- a/programs.html
+++ b/programs.html
@@ -46,6 +46,13 @@ rel="stylesheet">
 <link rel="stylesheet" href="css/slideshow.css">
 
 <style>
+	
+.flex{display: flex;justify-content:space-between;
+align-items:center;
+
+}
+
+
 .course-section {
 padding: 100px 0 50px;
 
@@ -202,13 +209,14 @@ visibility: hidden;
 <div class="loader"></div>
 </div>
 
+
 <!-- Header Area -->
 <header class="header" >
 <!-- Header Inner -->
 <div class="header-inner">
-<div class="container">
+
 <div class="inner">
-<div class="row">
+<div class="row flex">
 <div class="col-lg-3 col-md-3 col-12">
 <!-- Start Logo -->
 <div class="logo">
@@ -219,28 +227,33 @@ visibility: hidden;
 <div class="mobile-nav"></div>
 <!-- End Mobile Nav -->
 </div>
-<div class="col-lg-7 col-md-9 col-12">
+
 <!-- Main Menu -->
-<div class="main-menu">
+<div class="main-menu col-sm-12 col-lg-6 col-md-6 ">
 <nav class="navigation">
 <ul class="nav menu">
-<li><a href="index.html">Home</a></li>
-<li><a href="about.html">About Us</a></li>
-<li class="active"><a href="courses.html">Courses</a></li>
-<li><a href="contact.html">Contact Us</a></li>
+<li class="active"><a href="#" class="scroll">Home</a></li>
+<li><a href="about.html" class="scroll">About Us</a></li>
+<li><a href="programs.html" class="scroll">Programs</a></li>
+<!-- <li><a href="courses.html">Courses</a></li>  -->
+<li><a href="contact.html" class="scroll">Contact Us</a></li>
 </ul>
 </nav>
-</div>
-<!--/ End Main Menu -->
-</div>
 
 </div>
+<div class="action-btns col-3 ">
+
+<a href="contact.html" class="btn primary">Contact Now</a>
 </div>
-</div>
+<!--/ End Main Menu -->
+
+
+
 </div>
 <!--/ End Header Inner -->
 </header>
 <!-- End Header Area -->
+
 
 <!-- Breadcrumbs -->
 <div class="breadcrumbs overlay">
