update index.html 2

--- a/index.html
+++ b/index.html
@@ -325,9 +325,10 @@ margin: 0 auto;
 display: flex;
 flex-direction: column;
 gap: 1.5rem;
-padding: 0.7em;
+padding: 2em 0.5em ;
+margin-bottom: 3rem;
 animation: fadeIn 0.8s ease-out;
-background: #0000006e;
+/*background: #0000006e;*/
 border-radius: 1em;
 
 }
@@ -336,10 +337,12 @@ font-size: 1.125rem;
 font-weight: 300;
 letter-spacing: 0.05em;
 opacity: 0.9;
-color: darkblue;
+color: whitesmoke;
+text-align: left;
 }
 .slide-title {
-	color: orangered;
+	color: darkblue;
+	text-align: left;
 font-size: 3rem;
 font-weight: bold;
 line-height: 1.1;
@@ -351,6 +354,8 @@ line-height: 1.7;
 opacity: 0.9;
 max-width: 32rem;
 margin: 0 auto;
+text-align: left;
+color: whitesmoke;
 }
 .slide-buttons {
 display: flex;
@@ -377,7 +382,7 @@ width: 100%;
 }
 .btn-primary {
 background: darkblue;
-color: #8b5cf6;
+color: whitesmoke;
 box-shadow: 0 10px 30px -5px rgba(0, 0, 0, 0.1);
 }
 .btn-primary:hover {
@@ -529,10 +534,11 @@ font-size: 6rem;
 <div class="slide-overlay"></div>
 <div class="slide-content">
 <div class="slide-content-inner">
-<p class="slide-subtitle">Transforming Ideas into Reality</p>
-<h1 class="slide-title">Welcome to Innovation</h1>
+<h1 class="slide-title">We Provide <span>Services</span> That You Can
+<span>Trust!</span></h1>
 <p class="slide-description">
-Discover cutting-edge solutions that drive your business forward. Our innovative approach combines creativity with technology to deliver exceptional results that exceed expectations.
+ dedicated to empowering individuals and businesses with
+cutting-edge solutions 
 </p></div>
 
 <div class="slide-buttons">
@@ -546,10 +552,12 @@ Discover cutting-edge solutions that drive your business forward. Our innovative
 <div class="slide-overlay"></div>
 <div class="slide-content">
 <div class="slide-content-inner">
-<p class="slide-subtitle">Crafting Premium Experiences</p>
+
 <h1 class="slide-title">Excellence in Every Detail</h1>
 <p class="slide-description">
-Experience the difference that attention to detail makes. We meticulously design every aspect of our services to ensure you receive nothing but the finest quality and performance.
+
+Get the <span>skills</span> mentorship, and resources you
+need to thrive<span> in today’s digital world. </span>
 </p></div>
 <div class="slide-buttons">
 <button class="btn btn-primary">Learn More</button>
@@ -563,10 +571,11 @@ Experience the difference that attention to detail makes. We meticulously design
 <div class="slide-overlay"></div>
 <div class="slide-content">
 <div class="slide-content-inner">
-<p class="slide-subtitle">Building Lasting Partnerships</p>
-<h1 class="slide-title">Your Success, Our Mission</h1>
+<h1 class="slide-title">LEARN GROW <span>& </span>EXPLORE ENDLESS 
+<span>OPPURTUNITIES!</span></h1>
+
 <p class="slide-description">
-Join thousands of satisfied clients who have achieved their goals with our expert guidance. Together, we'll create sustainable growth and lasting success for your business.
+Join thousands of satisfied clients who have achieved their goals with our expert guidance. 
 </p></div>
 <div class="slide-buttons">
 <button class="btn btn-primary">Learn More</button>
