i created rough.html

--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@ font-size: 6rem;
 <div class="carousel">
 <div class="slides-container" id="slidesContainer">
 <!-- Slide 1 -->
-<div class="slide" style="background-image: url('https://images.unsplash.com/photo-1518770660439-4636190af475?ixlib=rb-4.0.3&auto=format&fit=crop&w=2000&q=80')">
+<div class="slide" style="background-image: url('./images/f1ddcbba-dd46-4502-b7f3-89c89d5b432d.jpg?q=80&w=1472&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); background-size: cover;">
 <div class="slide-overlay"></div>
 <div class="slide-content">
 <div class="slide-content-inner">
