--- a/aboutUs.html
+++ b/aboutUs.html
@@ -1192,11 +1192,12 @@ are not just learning, but truly understanding and applying their skills.
 </div>
 </div>
 </section>
-
+<div id="mission"></div>
 <!-- Mission Vision Section -->
 <section class="section mission-vision">
 <div class="container">
 <div class="mission-vision-grid">
+
 <!-- Mission -->
 <div class="card animate-fade-in">
 <div class="card-icon">
@@ -1208,10 +1209,11 @@ are not just learning, but truly understanding and applying their skills.
 <p class="card-text">
 In today's fast-paced world, technology is at the heart of nearly every industry. 
 At JE Tech Hub, we aim to bridge the gap between education and the evolving tech landscape. 
+<p id="vision"></p>
+
 <br>We understand that learning technology can seem daunting, which is why we focus on creating an environment that nurtures curiosity and fosters growth. Whether you are a beginner looking to start your journey in the tech field or an experienced professional aiming to upskill, our mission is to provide you with the tools, guidance, and confidence you need to succeed.
 </p>
 </div>
-
 <!-- Vision -->
 <div class="card animate-fade-in">
 <div class="card-icon">
@@ -1219,7 +1221,7 @@ At JE Tech Hub, we aim to bridge the gap between education and the evolving tech
 <div class="icon-dot"></div>
 </div>
 </div>
-<h3 class="card-title orangeHeading">Our Vision</h3>
+<h3 class="card-title orangeHeading " >Our Vision</h3>
 <blockquote class="card-quote">
 "Shaping the future of tech—raising brilliant minds and crafting skilled professionals 
 who drive innovation and solve real-world challenges",
